<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ChooseAppActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/segoeui"
        android:text="@string/chon_ung_dung"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/list_app"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_370sdp"></ListView>
    <!--android:dividerHeight="20dp"-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/text_cancel"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_25sdp"
            android:background="@drawable/button2"
            android:fontFamily="@font/segoeui"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/huy"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_ok"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="wrap_content"
            android:background="@drawable/button1"
            android:fontFamily="@font/segoeui"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/ok"
            android:textColor="#fff"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>